--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "firebase-auth-expo",
-    "slug": "firebase-auth-expo",
+    "name": "expo-starter-kit",
+    "slug": "expo-starter-kit",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
