--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.23.7",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
     "@types/react": "~18.2.14",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
