--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
@@ -18,7 +20,9 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,6 +31,7 @@
     "@types/react": "~18.2.14",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
+    "expo-build-properties": "^0.8.3",
     "prettier": "^3.1.1",
     "typescript": "^5.1.3"
   },
