--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "e2e:ios:debug:build": "detox build -c ios.debug",
+    "run:detox:local": "detox test --configuration ios.debug",
+    "eas-build-pre-install": "./eas-hooks/eas-build-pre-install.sh",
+    "eas-build-on-success": "./eas-hooks/eas-build-on-success.sh"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.7.3",
@@ -14,24 +18,30 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.12",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-dev-client": "~2.4.12"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.23.7",
     "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@config-plugins/detox": "^6.0.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.14",
+    "detox": "^20.17.0",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-jest": "^27.6.3",
     "expo-build-properties": "^0.8.3",
+    "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "typescript": "^5.1.3"
   },
