--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-jest": "^27.6.3",
     "expo-build-properties": "^0.8.3",
+    "firebase-admin": "^12.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "typescript": "^5.1.3"
